--- a/OOD_S00200293_PersonalProject/OOD_S00200293_PersonalProject/MainWindow.xaml
+++ b/OOD_S00200293_PersonalProject/OOD_S00200293_PersonalProject/MainWindow.xaml
@@ -5,8 +5,29 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:OOD_S00200293_PersonalProject"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="450" Width="664">
     <Grid>
-        
+        <ListBox x:Name="LBX_Games" HorizontalAlignment="Left" Height="160" Margin="23,99,0,0" VerticalAlignment="Top" Width="217"/>
+        <TextBox x:Name="TBX_Search" HorizontalAlignment="Left" Height="23" Margin="23,69,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="217"/>
+        <Label Content="GAME DATABASE" HorizontalAlignment="Left" Margin="23,15,0,0" VerticalAlignment="Top" Width="300" Height="41" FontSize="24" Foreground="#FF0074FF" FontFamily="Segoe UI Black"/>
+        <RadioButton x:Name="RDBTN_All" Content="All" GroupName="Category_filter" HorizontalAlignment="Left" Margin="23,274,0,0" VerticalAlignment="Top"/>
+        <RadioButton x:Name="RDBTN_ReleaseDate" Content="Release Date" GroupName="Category_filter" HorizontalAlignment="Left" Margin="23,294,0,0" VerticalAlignment="Top"/>
+        <RadioButton x:Name="RDBTN_Publisher" Content="Publisher" GroupName="Category_filter" HorizontalAlignment="Left" Margin="23,314,0,0" VerticalAlignment="Top"/>
+        <RadioButton x:Name="RDBTN_ESRB" Content="ESRB" GroupName="Category_filter" HorizontalAlignment="Left" Margin="23,334,0,0" VerticalAlignment="Top"/>
+        <Button x:Name="BTN_Random" Content="Random Game" HorizontalAlignment="Left" Margin="23,366,0,0" VerticalAlignment="Top" Width="101" Height="28"/>
+        <Button x:Name="BTN_AddNew" Content="Add New Game" HorizontalAlignment="Left" Margin="148,366,0,0" VerticalAlignment="Top" Width="92" Background="#FF0074FF" Foreground="White" Height="29"/>
+        <Image HorizontalAlignment="Left" Height="88" Margin="376,38,0,0" VerticalAlignment="Top" Width="76"/>
+        <Label Content="Release Date:" HorizontalAlignment="Left" Margin="376,263,0,0" VerticalAlignment="Top" Width="91" FontWeight="Bold"/>
+        <Label Content="Publisher:" HorizontalAlignment="Left" Margin="376,294,0,0" VerticalAlignment="Top" Width="76" FontWeight="Bold"/>
+        <Label Content="Rating:" HorizontalAlignment="Left" Margin="376,325,0,0" VerticalAlignment="Top" FontWeight="Bold"/>
+        <Label Content="PEGI:" HorizontalAlignment="Left" Margin="376,351,0,0" VerticalAlignment="Top" FontWeight="Bold"/>
+        <Label Content="ESRB:" HorizontalAlignment="Left" Margin="474,351,0,0" VerticalAlignment="Top" FontWeight="Bold"/>
+        <TextBlock x:Name="TBLK_ReleaseDate" HorizontalAlignment="Left" Margin="474,268,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top"/>
+        <TextBlock x:Name="TBLK_Publisher" HorizontalAlignment="Left" Margin="474,299,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top"/>
+        <TextBlock x:Name="TBLK_PEGI" HorizontalAlignment="Left" Margin="418,356,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top"/>
+        <TextBlock x:Name="TBLK_ESRB" HorizontalAlignment="Left" Margin="518,356,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top"/>
+        <TextBlock x:Name="TBLK_Description" HorizontalAlignment="Left" Margin="376,191,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" Height="67" Width="224"/>
+        <TextBlock x:Name="TBLK_Title" HorizontalAlignment="Left" Margin="376,160,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" Height="26" Width="224"/>
+
     </Grid>
 </Window>
