--- a/OOD_S00200293_PersonalProject/OOD_S00200293_PersonalProject/MainWindow.xaml
+++ b/OOD_S00200293_PersonalProject/OOD_S00200293_PersonalProject/MainWindow.xaml
@@ -7,8 +7,8 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="664" Loaded="Window_Loaded">
     <Grid>
-        <ListBox x:Name="LBX_Games" HorizontalAlignment="Left" Height="160" Margin="23,99,0,0" VerticalAlignment="Top" Width="217" SelectionChanged="LBX_Games_SelectionChanged"/>
-        <TextBox x:Name="TBX_Search" HorizontalAlignment="Left" Height="23" Margin="23,69,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="217"/>
+        <ListBox x:Name="LBX_Games" HorizontalAlignment="Left" Height="131" Margin="23,128,0,0" VerticalAlignment="Top" Width="300" SelectionChanged="LBX_Games_SelectionChanged"/>
+        <TextBox x:Name="TBX_Search" HorizontalAlignment="Left" Height="23" Margin="23,69,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="300"/>
         <Label Content="GAME DATABASE" HorizontalAlignment="Left" Margin="23,15,0,0" VerticalAlignment="Top" Width="300" Height="41" FontSize="24" Foreground="#FF0074FF" FontFamily="Segoe UI Black"/>
         <RadioButton x:Name="RDBTN_All" Content="All" GroupName="Category_filter" HorizontalAlignment="Left" Margin="23,274,0,0" VerticalAlignment="Top"/>
         <RadioButton x:Name="RDBTN_ReleaseDate" Content="Release Date" GroupName="Category_filter" HorizontalAlignment="Left" Margin="23,294,0,0" VerticalAlignment="Top"/>
@@ -28,6 +28,7 @@
         <TextBlock x:Name="TBLK_ESRB" HorizontalAlignment="Left" Margin="518,356,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top"/>
         <TextBlock x:Name="TBLK_Description" HorizontalAlignment="Left" Margin="376,191,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" Height="67" Width="224"/>
         <TextBlock x:Name="TBLK_Title" HorizontalAlignment="Left" Margin="376,160,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" Height="26" Width="224"/>
+        <Button x:Name="BTN_SearchMovie" Content="Search" HorizontalAlignment="Left" Margin="23,97,0,0" VerticalAlignment="Top" Width="75" Click="BTN_SearchMovie_Click"/>
 
     </Grid>
 </Window>
