--- a/OOD_S00200293_PersonalProject/OOD_S00200293_PersonalProject/MainWindow.xaml
+++ b/OOD_S00200293_PersonalProject/OOD_S00200293_PersonalProject/MainWindow.xaml
@@ -1,21 +1,22 @@
 ﻿<Window x:Class="OOD_S00200293_PersonalProject.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        Background="{DynamicResource MaterialDesignPaper}"
+        TextElement.Foreground="{DynamicResource MaterialDesignBody}"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:OOD_S00200293_PersonalProject"
-        mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="664" Loaded="Window_Loaded">
     <Grid>
-        <ListBox x:Name="LBX_Games" HorizontalAlignment="Left" Height="131" Margin="23,128,0,0" VerticalAlignment="Top" Width="300" SelectionChanged="LBX_Games_SelectionChanged"/>
+        <ListBox x:Name="LBX_Movies" HorizontalAlignment="Left" Height="131" Margin="23,128,0,0" VerticalAlignment="Top" Width="300" SelectionChanged="LBX_Movies_SelectionChanged"/>
         <TextBox x:Name="TBX_Search" HorizontalAlignment="Left" Height="23" Margin="23,69,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="300"/>
         <Label Content="GAME DATABASE" HorizontalAlignment="Left" Margin="23,15,0,0" VerticalAlignment="Top" Width="300" Height="41" FontSize="24" Foreground="#FF0074FF" FontFamily="Segoe UI Black"/>
         <RadioButton x:Name="RDBTN_All" Content="All" GroupName="Category_filter" HorizontalAlignment="Left" Margin="23,274,0,0" VerticalAlignment="Top"/>
         <RadioButton x:Name="RDBTN_ReleaseDate" Content="Release Date" GroupName="Category_filter" HorizontalAlignment="Left" Margin="23,294,0,0" VerticalAlignment="Top"/>
         <RadioButton x:Name="RDBTN_Publisher" Content="Publisher" GroupName="Category_filter" HorizontalAlignment="Left" Margin="23,314,0,0" VerticalAlignment="Top"/>
         <RadioButton x:Name="RDBTN_ESRB" Content="ESRB" GroupName="Category_filter" HorizontalAlignment="Left" Margin="23,334,0,0" VerticalAlignment="Top"/>
-        <Button x:Name="BTN_Random" Content="Random Game" HorizontalAlignment="Left" Margin="23,366,0,0" VerticalAlignment="Top" Width="101" Height="28"/>
-        <Button x:Name="BTN_AddNew" Content="Add New Game" HorizontalAlignment="Left" Margin="148,366,0,0" VerticalAlignment="Top" Width="92" Background="#FF0074FF" Foreground="White" Height="29"/>
+        <Button x:Name="BTN_Random" Style="{StaticResource MaterialDesignRaisedAccentButton}" Content="Random Game" HorizontalAlignment="Left" Margin="23,366,0,0" VerticalAlignment="Top" Width="101" Height="28"/>
+        <Button x:Name="BTN_AddNew" Style="{StaticResource MaterialDesignRaisedAccentButton}" Content="Add New Game" HorizontalAlignment="Left" Margin="148,366,0,0" VerticalAlignment="Top" Width="92" Background="#FF0074FF" Foreground="White" Height="29" Click="BTN_AddNew_Click"/>
         <Image x:Name="IMG_CoverArt" HorizontalAlignment="Left" Height="108" Margin="376,38,0,0" VerticalAlignment="Top" Width="76" Source="CallofDutycover.jpg"/>
         <Label Content="Release Date:" HorizontalAlignment="Left" Margin="376,263,0,0" VerticalAlignment="Top" Width="91" FontWeight="Bold"/>
         <Label Content="Publisher:" HorizontalAlignment="Left" Margin="376,294,0,0" VerticalAlignment="Top" Width="76" FontWeight="Bold"/>
@@ -28,7 +29,7 @@
         <TextBlock x:Name="TBLK_ESRB" HorizontalAlignment="Left" Margin="518,356,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top"/>
         <TextBlock x:Name="TBLK_Description" HorizontalAlignment="Left" Margin="376,191,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" Height="67" Width="224"/>
         <TextBlock x:Name="TBLK_Title" HorizontalAlignment="Left" Margin="376,160,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" Height="26" Width="224"/>
-        <Button x:Name="BTN_SearchMovie" Content="Search" HorizontalAlignment="Left" Margin="23,97,0,0" VerticalAlignment="Top" Width="75" Click="BTN_SearchMovie_Click"/>
+        <Button x:Name="BTN_SearchMovie" Style="{StaticResource MaterialDesignRaisedAccentButton}" Content="Search" HorizontalAlignment="Left" Margin="23,97,0,0" VerticalAlignment="Top" Width="75" Click="BTN_SearchMovie_Click"/>
 
     </Grid>
 </Window>
