--- a/OOD_S00200293_PersonalProject/OOD_S00200293_PersonalProject/AddMovie.xaml
+++ b/OOD_S00200293_PersonalProject/OOD_S00200293_PersonalProject/AddMovie.xaml
@@ -19,11 +19,13 @@
             <RowDefinition Height="*"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
-        <Label Content="Add Movie" HorizontalAlignment="Left" Margin="30,26,0,0" VerticalAlignment="Top" Width="180"/>
+        <Label Style="{StaticResource MaterialDesignLabel}" Content="Add Movie" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="193" FontSize="24"/>
         <TextBox HorizontalAlignment="Left" Height="23" Margin="33,68,0,0" TextWrapping="Wrap" Text="Year" VerticalAlignment="Top" Width="98" Grid.Column="1"/>
         <TextBox HorizontalAlignment="Left" Height="23" Margin="40,68,0,0" TextWrapping="Wrap" Text="Title" VerticalAlignment="Top" Width="252"/>
-        <TextBox HorizontalAlignment="Left" Height="23" Margin="53,48,0,0" Grid.Row="2" TextWrapping="Wrap" Text="IMDBRating" VerticalAlignment="Top" Width="239" TextChanged="TextBox_TextChanged"/>
-        <TextBox Grid.Column="1" HorizontalAlignment="Left" Height="23" Margin="33,48,0,0" Grid.Row="2" TextWrapping="Wrap" Text="rated" VerticalAlignment="Top" Width="280"/>
-        <Button Style="{StaticResource MaterialDesignRaisedDarkButton}" Content="Add Movie" Margin="20,52,246,20" Grid.Row="3"/>
+        <TextBox HorizontalAlignment="Left" Height="23" Margin="40,48,0,0" Grid.Row="2" TextWrapping="Wrap" Text="IMDBRating" VerticalAlignment="Top" Width="239" TextChanged="TextBox_TextChanged"/>
+        <TextBox Grid.Column="1" HorizontalAlignment="Left" Height="23" Margin="33,48,0,0" Grid.Row="2" TextWrapping="Wrap" Text="Rated" VerticalAlignment="Top" Width="280"/>
+        <Button Style="{StaticResource MaterialDesignRaisedAccentButton}" Content="Add Movie" Margin="20,52,246,20" Grid.Row="3"/>
+        <TextBox HorizontalAlignment="Left" Height="23" Margin="40,46,0,0" Grid.Row="1" TextWrapping="Wrap" Text="Director" VerticalAlignment="Top" Width="120"/>
+        <TextBox Grid.Column="1" HorizontalAlignment="Left" Height="23" Margin="33,46,0,0" Grid.Row="1" TextWrapping="Wrap" Text="Plot" VerticalAlignment="Top" Width="120"/>
     </Grid>
 </Window>
