--- a/OOD_S00200293_PersonalProject/OOD_S00200293_PersonalProject/MainWindow.xaml
+++ b/OOD_S00200293_PersonalProject/OOD_S00200293_PersonalProject/MainWindow.xaml
@@ -22,19 +22,19 @@
         <RadioButton x:Name="RDBTN_Rating" Content="Rating" GroupName="Category_filter" HorizontalAlignment="Left" Margin="111,327,0,0" Grid.Column="0" VerticalAlignment="Top" Checked="RDBTN_Rating_Checked"/>
         <Button x:Name="BTN_DBAddMovie" Style="{StaticResource MaterialDesignPaperButton}" Content="Add to DB" HorizontalAlignment="Left" Margin="23,366,0,0" Grid.Column="0" VerticalAlignment="Top" Width="101" Height="28" Click="BTN_DBAddMovie_Click"/>
         <Button x:Name="BTN_AddNew" Style="{StaticResource MaterialDesignRaisedAccentButton}" Content="Add New Game" HorizontalAlignment="Left" Margin="148,366,0,0" Grid.Column="0" VerticalAlignment="Top" Width="92" Height="29" Click="BTN_AddNew_Click"/>
-        <Image x:Name="IMG_CoverArt" HorizontalAlignment="Left" Height="108" Margin="28,38,0,0"  Grid.Column="1" VerticalAlignment="Top" Width="76" Source="CallofDutycover.jpg"/>
+        <Image x:Name="IMG_CoverArt" HorizontalAlignment="Left" Height="108" Margin="28,38,0,0"  Grid.Column="1" VerticalAlignment="Top" Width="76"/>
         <!--Column 2-->
         <Label Content="Release Date:" HorizontalAlignment="Left" Margin="28,273,0,0" Grid.Column="1" VerticalAlignment="Top" Width="91" FontWeight="Bold"/>
         <Label Content="Director:" HorizontalAlignment="Left" Margin="28,302,0,0" Grid.Column="1" VerticalAlignment="Top" Width="76" FontWeight="Bold"/>
 
         <Label Content="Rated:" HorizontalAlignment="Left" Margin="28,358,0,0" VerticalAlignment="Top" Grid.Column="1" FontWeight="Bold" RenderTransformOrigin="-0.303,0.264"/>
-        <TextBlock x:Name="TBLK_ReleaseDate" HorizontalAlignment="Left" Margin="121,277,0,0" TextWrapping="Wrap" Grid.Column="1" Text="TextBlock" VerticalAlignment="Top"/>
-        <TextBlock x:Name="TBLK_Director" HorizontalAlignment="Left" Margin="121,308,0,0" TextWrapping="Wrap" Grid.Column="1" Text="TextBlock" VerticalAlignment="Top"/>
-        <TextBlock x:Name="TBLK_PEGI" HorizontalAlignment="Left" Margin="121,366,0,0" TextWrapping="Wrap"  Grid.Column="1" Text="TextBlock" VerticalAlignment="Top"/>
-        <TextBlock x:Name="TBLK_Description" HorizontalAlignment="Left" Margin="28,192,0,0" TextWrapping="Wrap" Grid.Column="1" Text="TextBlock" VerticalAlignment="Top" Height="80" Width="260" ScrollViewer.CanContentScroll="True"/>
-        <TextBlock x:Name="TBLK_Title" HorizontalAlignment="Left" Margin="28,160,0,0" TextWrapping="Wrap" Text="TextBlock" Grid.Column="1" VerticalAlignment="Top" Height="26" Width="224"/>
+        <TextBlock x:Name="TBLK_ReleaseDate" HorizontalAlignment="Left" Margin="121,277,0,0" TextWrapping="Wrap" Grid.Column="1" VerticalAlignment="Top"/>
+        <TextBlock x:Name="TBLK_Director" HorizontalAlignment="Left" Margin="121,308,0,0" TextWrapping="Wrap" Grid.Column="1" VerticalAlignment="Top"/>
+        <TextBlock x:Name="TBLK_PEGI" HorizontalAlignment="Left" Margin="121,366,0,0" TextWrapping="Wrap"  Grid.Column="1" VerticalAlignment="Top"/>
+        <TextBlock x:Name="TBLK_Description" HorizontalAlignment="Left" Margin="28,192,0,0" TextWrapping="Wrap" Grid.Column="1" VerticalAlignment="Top" Height="80" Width="260" ScrollViewer.CanContentScroll="True"/>
+        <TextBlock x:Name="TBLK_Title" HorizontalAlignment="Left" Margin="28,160,0,0" TextWrapping="Wrap" Grid.Column="1" VerticalAlignment="Top" Height="26" Width="224"/>
         <Button x:Name="BTN_SearchMovie" Style="{StaticResource MaterialDesignRaisedAccentButton}" Content="Search" Grid.Column="0" HorizontalAlignment="Left" Margin="10,92,0,0" VerticalAlignment="Top" Width="75" Click="BTN_SearchMovie_Click" Height="31"/>
-        <TextBlock x:Name="TBLK_IMDBRating" HorizontalAlignment="Left" Margin="121,333,0,0" TextWrapping="Wrap" Text="TextBlock" Grid.Column="1" VerticalAlignment="Top"/>
+        <TextBlock x:Name="TBLK_IMDBRating" HorizontalAlignment="Left" Margin="121,333,0,0" TextWrapping="Wrap" Grid.Column="1" VerticalAlignment="Top"/>
         <Label x:Name="IMDBRating" Content="IMDB Rating:" HorizontalAlignment="Left" Margin="28,327,0,0" Grid.Column="1" VerticalAlignment="Top" FontWeight="Bold"/>
         <RadioButton x:Name="RDBTN_API" GroupName="Search_Source_Selection" Content="API" HorizontalAlignment="Left" Margin="182,100,0,0"  Grid.Column="0" VerticalAlignment="Top" IsChecked="True" Checked="RDBTN_API_Checked"/>
         <RadioButton x:Name="RDBTN_Database" GroupName="Search_Source_Selection" Content="Database" HorizontalAlignment="Left" Margin="247,100,0,0" Grid.Column="0" VerticalAlignment="Top" Checked="RDBTN_Database_Checked"/>
